SERVER-18078 do not replicate temporary collections in mapreduce