src/mongo/db/commands/mr.cpp
@@ -339,13 +339,16 @@ namespace mongo {
          * Clean up the temporary and incremental collections
          */
         void State::dropTempCollections() {
-            // Dropping the tempNamespace must be logged as that collection is replicated.
             _db.dropCollection(_config.tempNamespace);
             // Always forget about temporary namespaces, so we don't cache lots of them
             ShardConnection::forgetNS( _config.tempNamespace );
             if (_useIncremental) {
                 // We don't want to log the deletion of incLong as it isn't replicated. While
                 // harmless, this would lead to a scary looking warning on the secondaries.
+                bool shouldReplicateWrites = _txn->writesAreReplicated();
+                _txn->setReplicatedWrites(false);
+                ON_BLOCK_EXIT(&OperationContext::setReplicatedWrites, _txn, shouldReplicateWrites);
+
                 ScopedTransaction scopedXact(_txn, MODE_IX);
                 Lock::DBLock lk(_txn->lockState(),
                                 nsToDatabaseSubstring(_config.incLong),
@@ -372,6 +375,10 @@ namespace mongo {
             if (_useIncremental) {
                 // Create the inc collection and make sure we have index on "0" key.
                 // Intentionally not replicating the inc collection to secondaries.
+                bool shouldReplicateWrites = _txn->writesAreReplicated();
+                _txn->setReplicatedWrites(false);
+                ON_BLOCK_EXIT(&OperationContext::setReplicatedWrites, _txn, shouldReplicateWrites);
+
                 OldClientWriteContext incCtx(_txn, _config.incLong);
                 WriteUnitOfWork wuow(_txn);
                 Collection* incColl = incCtx.getCollection();
